# SemT-dag-builder

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/nb2scripts/: __init__.py  classifier.py  cli.py  dag_generator.py  loader.py  param_extractor.py  renderer.py  schema.py  script_grouper.py  syntax_fixer.py  writer.py
src/nb2scripts/runtime_templates/: Dockerfile.airflow  Dockerfile.python-runner  docker-compose.yml  entrypoint.sh
src/nb2scripts/templates/: dag_template.j2  script_base.j2
src/nb2scripts/templates/operations/: download.j2  extend.j2  load.j2  reconcile.j2
